# C-SDL3

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build-windows.bat  docs.md
.claude/: settings.json
.claude/rules/: code-style.md  entities.md  scope.md
constants/: map.c
docs/superpowers/plans/: 2026-04-16-player-debug-coords.md  2026-04-24-basic-floor-tiles.md
docs/superpowers/specs/: 2026-05-02-melee-weapon-bat-design.md
game/: combat.c  game.c  main.c
include/: array.h  combat.h  entity.h  game.h  helper.h  map.h
playground/: array.c
release/: hello
src/: helper.c  main.c  sdl_hello.c
topdown/: camera.c  camera.h  common.h  events.c  init.c  iterate.c  quit.c  render.c  render.h  tilemap.c  tilemap.h  update.c  update.h  weapon.c  weapon.h  world.h
topdown/entity/: enemy.c  enemy.h  entity.h  player.c  player.h
